--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^15.0.0",
     "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^1.0.1",
     "objection": "^3.0.1",
     "pg": "^8.7.1"
