--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "knex": "^1.0.1",
+    "multer": "^1.4.4",
     "objection": "^3.0.1",
     "pg": "^8.7.1"
   },
